--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -54,7 +54,7 @@
 								</button>
 								<div class="col-lg-10">
 									<a href="/" class="navbar-brand" style="width:100%;height:auto;">
-										<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:70%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
+										<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:60%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
 									</a>
 								</div>
 							</div>
@@ -145,16 +145,19 @@
 	<nav class="footer" style="">
 		<div class="fluid-container">
 			<div class="foot row" style="">
+				<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
+					<div class="row">
+						<div class="col-md-1 col-lg-1 col-xs-1 col-sm-1">
+						</div>
+						<div class="col-md-11 col-lg-11 col-xs-11 col-sm-11 f_img" style="margin-left: -5px;">
+							<img src="../images/gmtwhite.png" style="">
+							<p style=" margin-bottom: 0px; padding-top: 15px; ">+91 832 240 5900</p>
+							<p style=" ">info@goamedicaltravel.com</p>
+							<p style=" margin-bottom: 0px;padding-bottom: 18px;"><i class="fa fa-copyright"></i> Copyright 2015 Friendly Hospitality Solutions Pvt. Ltd.</p>
 
-				<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4 f_img">
-
-						<img src="../images/gmtwhite.png" style="">
-						<p style=" margin-bottom: 0px; padding-top: 15px; ">+91 832 240 5900</p>
-						<p style=" ">info@goamedicaltravel.com</p>
-						<p style=" margin-bottom: 0px;padding-top: 10px;"><i class="fa fa-copyright"></i> Copyright 2015 Friendly Hospitality Solutions Pvt. Ltd.</p>
-
+						</div>
+					</div>
 				</div>
-
 				<div class="col-md-8 col-lg-8 col-xs-8 col-sm-8">
 					<div class="row foot_data" style="">
 
@@ -180,17 +183,17 @@
 								<li><a href="/" style="color:white;">News & Events</a></li>
 								<ul>
 						</div>
-
-						<div class="col-md-2 col-lg-2 col-xs-2 col-sm-2">
+						<div class="col-md-1 col-lg-1 col-xs-1 col-sm-1">
+						</div>
+						<div class="col-md-5 col-lg-5 col-xs-5 col-sm-5" style="padding-left: 50px;">
 							<h4 style="color:white; font-size:15px;font-family:SourceSansPro-Regular;">Connect On</h4>
 							<a href=""><i class="fa fa-facebook-square fa-2x" style="color:rgb(58,87,149)"></i></a>
 							<a href=""><i class="fa fa-twitter-square fa-2x" style="color:rgb(40,169,224)" ></i></a>
 							<a href=""><i class="fa fa-google-plus-square fa-2x" style="color:rgb(230,75,68)"></i></a>
 							<a href=""><i class="fa fa-linkedin-square fa-2x" style="color:rgb(1,119,181)"></i></a>
-						</div>
-						<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
-							<h4>&nbsp;</h4>
-							<div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 2px; margin-left: -25px;"></div>
+
+							<!-- <h4>&nbsp;</h4> -->
+							<div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 2px;"></div>
 						</div>
 
 					</div>
