--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4932,6 +4932,9 @@ button.close {
 .no-padding {
   padding: 0; }
 
+.iti-flag {
+  background-image: url(path/to/flags.png); }
+
 .navbar {
   margin-bottom: 0; }
 
@@ -5126,8 +5129,8 @@ button.close {
   height: 447px;
   padding-bottom: 40px; }
   .doc img {
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%; }
   .doc h3 {
     font-family: SourceSansPro-Semibold;
@@ -5412,7 +5415,7 @@ a:focus {
   border-color: #ff6c6f;
   box-shadow: 0 3px 0 0 #b24b4d;
   font-family: SourceSansPro-Regular;
-  margin-top: 2px; }
+  margin-top: 4px; }
   .btn-primary.rais .search_doc {
     font-size: 15px; }
 
@@ -5438,6 +5441,25 @@ a:focus {
       font-size: 16.5px; }
     .panel_doc .panel_heading .accordion_doc .icon {
       color: #d6d2d2; }
+
+.homepage {
+  background: url("../images/GMTHome(2).jpg") no-repeat center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: table;
+  width: 100%;
+  height: 447px; }
+
+.jumbotron {
+  background: url("../images/GOAhome(1).jpg") no-repeat center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
 
 .hero {
   background: url("../images/Meet%20the%20Doctors.jpg") no-repeat center center;
@@ -5476,16 +5498,16 @@ a:focus {
     .hero .container .form-group {
       padding: 0 0 0 15px; }
       .hero .container .form-group .form-control {
-        width: 100%;
+        width: 105%;
         height: auto;
         padding: 8px 12px 10px;
-        margin-left: 3px; }
+        margin-left: -15px; }
       .hero .container .form-group #proc {
         font-family: SourceSansPro-Semibold;
         color: black;
-        font-size: 22px;
+        font-size: 18px;
         font-weight: 300;
-        padding-bottom: 10px; }
+        padding-top: 4px; }
     .hero .container .block {
       background-color: #d6d2d2;
       padding: 5px 15px; }
