--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -1,6 +1,108 @@
 {{!< default}}
-<div class="container">
-	<div class="jumbotron">
-		<img src="/images/logo.svg" width="160">
+
+<!-- <div class="jumbotron"><img src="/images/logo.svg" width="160">
 		<h1>Welcome</h1>
+		hdjsfjdblkj
+		{{specialities}}
+		{{#each provider}}
+			{{name}}
+		{{/each}} -->
+		<div class="row procedure">
+<div class="homepage">
+
+	<!-- <img src="../images/GMTHome(2).jpg" style="width:100% height:auto;"> -->
+</div>
+
+<div class="row">
+	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+		<div class="thumbnail">
+			<!-- <img src="..." alt="..."> -->
+			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+			<div class="caption">
+
+				<p>DOC</p>
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+			</div>
+		</div>
 	</div>
+
+	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+		<div class="thumbnail">
+			<!-- <img src="..." alt="..."> -->
+			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+			<div class="caption">
+
+				<p>HOSP</p>
+				<p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+		<div class="thumbnail">
+
+			<div class="caption">
+
+				<p>PROCEDURES</p>
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="jumbotron" style="">
+
+  <h1>Hello, world!</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
+
+
+<div class="row">
+	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+		<div class="thumbnail">
+			<!-- <img src="..." alt="..."> -->
+			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+			<div class="caption">
+
+				<p>DOC</p>
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+			</div>
+		</div>
+	</div>
+
+<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+		<div class="thumbnail">
+			<!-- <img src="..." alt="..."> -->
+			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+			<div class="caption">
+
+				<p>HOSP</p>
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+		<div class="thumbnail">
+
+			<div class="caption">
+
+				<p>PROCEDURES</p>
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+		<div class="thumbnail">
+
+			<div class="caption">
+
+				<p>PROCEDURES</p>
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
