--- a/Gmt/templates/views/profile.hbs
+++ b/Gmt/templates/views/profile.hbs
@@ -43,7 +43,7 @@
 						<p>
 						<b> Please specify a file, or a set of files: </b>
 							<br>
-							<input type="file" name="image_upload" size="40">
+							<input type="file" name="upload" size="40" multiple>
 						</p>
 						<div>
 							<input name="submit" type="submit" value="Send">
